# ask

./: AGENTS.md  Cargo.toml
src/: README.md  lib.rs  main.rs
src/agent/: agent.rs  hook.rs  mod.rs
src/agent/hook/: hook.rs
src/hook/: hook.rs
src/tool/: bash.rs  mod.rs  read.rs
src/ui/cli/: mod.rs
tests/: agent_tests.rs
