[package]
name = "ask"
version = "0.1.0"
edition = "2021"

[lib]
name = "ask"
path = "src/lib.rs"

[[bin]]
name = "ask"
path = "src/bin/ask.rs"

[dependencies]
rig-core = "0.31.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
futures = "0.3"
